--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,19 @@
   "version": 2,
   "builds": [
     {
-      "src": "./index.js",
+      "src": "index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
-    
     {
-      "src": "/(.*)",
-      "dest": "./index.js"
+      "src": "^/metadata/(.*)$",
+      "dest": "index.js"
+    },
+    {
+      "src": "^/api$",
+      "methods": ["POST"],
+      "dest": "index.js"
     }
   ]
 }
