--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,30 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "index.js",
-      "use": "@vercel/node"
-    }
+    { "src": "index.js", "use": "@vercel/node" }
   ],
   "routes": [
+    { "src": "^/metadata/(.*)$", "dest": "index.js" },
+    { "src": "^/api$", "methods": ["POST"], "dest": "index.js" }
+  ],
+  "headers": [
     {
-      "src": "^/metadata/(.*)$",
-      "dest": "index.js"
+      "source": "/api",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "https://token-launcher-nine.vercel.app" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
+        { "key": "Access-Control-Allow-Credentials", "value": "true" }
+      ]
     },
     {
-      "src": "^/api$",
-      "methods": ["POST"],
-      "dest": "index.js"
+      "source": "/metadata/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "https://token-launcher-nine.vercel.app" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
+        { "key": "Access-Control-Allow-Credentials", "value": "true" }
+      ]
     }
   ]
 }
