--- a/vercel.json
+++ b/vercel.json
@@ -4,27 +4,20 @@
     { "src": "index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "^/metadata/(.*)$", "dest": "index.js" },
-    { "src": "^/api$", "methods": ["POST"], "dest": "index.js" }
-  ],
-  "headers": [
-    {
-      "source": "/api",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "https://token-launcher-nine.vercel.app" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
-        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
-        { "key": "Access-Control-Allow-Credentials", "value": "true" }
-      ]
+    { 
+        "src": "^/metadata/(.*)$", 
+        "dest": "index.js" , 
+        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+        "headers": {
+            "Access-Control-Allow-Origin": "*"
+        }
     },
-    {
-      "source": "/metadata/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "https://token-launcher-nine.vercel.app" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
-        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
-        { "key": "Access-Control-Allow-Credentials", "value": "true" }
-      ]
+    {   "src": "^/api$", 
+        "dest": "index.js" ,
+        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+        "headers": {
+            "Access-Control-Allow-Origin": "*"
+        }
     }
   ]
 }
